修改员工基础数据下载导入模板路径为OSS

--- a/WebContent/data_access/human_store_list.html
+++ b/WebContent/data_access/human_store_list.html
@@ -527,7 +527,7 @@ var p_citySelect = decode64(getUrlParamByKey("citySelect"));
 			                                </span>
                             			</td>
                             			<td>
-                            				<font color='red'>提示:1.请确保导入文件与门店员工花名册表头一致 <a href="https://imagedata.guoanshequ.com/file_manager/TKHS_template.xlsx">下载模板（非海格）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.请确保导入文件中[员工编号][门店]两列为空<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.导入前，确保Excel中无公式！</font>
+                            				<font color='red'>提示:1.请确保导入文件与门店员工花名册表头一致 <a href="https://cdn.guoanshuju.com/daqWeb/static/tkhs_template.xlsx">下载模板（非海格）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.请确保导入文件中[员工编号][门店]两列为空<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.导入前，确保Excel中无公式！</font>
                             			</td>
                             		<tr>
                             	</table>
@@ -564,7 +564,7 @@ var p_citySelect = decode64(getUrlParamByKey("citySelect"));
 			                            </p>
                             		</td>
                             		<td>
-                            			<font color='red'>提示:1.请确保导入文件中sheet页的名称为 国安社区 <a href="https://imagedata.guoanshequ.com/file_manager/HG_template.xlsx"> 下载模板（海格）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.导入前，确保Excel中无公式！</font>
+                            			<font color='red'>提示:1.请确保导入文件中sheet页的名称为 国安社区 <a href="https://cdn.guoanshuju.com/daqWeb/static/hg_template.xlsx"> 下载模板（海格）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.导入前，确保Excel中无公式！</font>
                             		</td>
                             	</tr>
                             </table>
