--- a/WebContent/hr/human_city_list.html
+++ b/WebContent/hr/human_city_list.html
@@ -283,7 +283,7 @@
 			                                </span>
                             			</td>
                             			<td>
-                            				<font color='red'>提示:1.请确保导入文件与城市员工花名册表头一致 <a href="https://imagedata.guoanshequ.com/file_manager/CS_template.xlsx">下载模板（城市员工）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.请确保导入文件中[员工编号]一列为空<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.导入前，确保Excel中无公式！</font>
+                            				<font color='red'>提示:1.请确保导入文件与城市员工花名册表头一致 <a href="https://cdn.guoanshuju.com/daqWeb/static/cs_template.xlsx">下载模板（城市员工）</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.请确保导入文件中[员工编号]一列为空<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.导入前，确保Excel中无公式！</font>
                             			</td>
                             		<tr>
                             	</table>
