优化订单档案订单号校验提示

--- a/WebContent/crm/searchData_return_order.html
+++ b/WebContent/crm/searchData_return_order.html
@@ -620,17 +620,21 @@ Date.prototype.format=function(fmt) {
   	    if(number_str==""&&storeName!=""){
   	    	number_str=-10000;
   	    }
-  	   
-  	    $("#process_div").show();
- 	 	$("#process_div_pic").show();
+
 		var orderLabels = $("#label_private_manual").val();
 		if(orderLabels!=null && orderLabels!='' && orderLabels.indexOf(',') >= 0){
 	    	orderLabels = orderLabels.substring(0,orderLabels.length-1);
 	    }
 	    var ordersn = $("#ordersn_manual").val();
 	    if(ordersn!=""){
-	    	ordersn = ordersn.replace(/\s+/g,"");  
+	    	ordersn = ordersn.replace(/\s+/g,"");
+            if(ordersn.match(/\d/g).length<20){
+                crm_alert(0,"订单号输入不足20位，请认真核对!");
+                return;
+            }
 	    }
+        $("#process_div").show();
+        $("#process_div_pic").show();
 	    var cityName = $("#citySelect  option:selected").val();
 	    var dept = $("#dept_manual").val();
 	    var eshopId = $("#eshop_id_manual").val();
@@ -988,9 +992,7 @@ Date.prototype.format=function(fmt) {
 	  		 begin_end_date = sdate.split("-");
 	   	}
 	  	
-	    $("#process_div").show();
-	 	$("#process_div_pic").show();
-	 	var number_str = $("#store_id_manual").val(); 
+	 	var number_str = $("#store_id_manual").val();
 	    var storeName = $("#store_name_manual").val();
 	    if(number_str==""&&storeName!=""){
 	    	number_str=-10000;
@@ -1002,8 +1004,14 @@ Date.prototype.format=function(fmt) {
 	    }
 	    var ordersn = $("#ordersn_manual").val();
 	    if(ordersn!=""){
-	    	ordersn = ordersn.replace(/\s+/g,"");  
+	    	ordersn = ordersn.replace(/\s+/g,"");
+            if(ordersn.match(/\d/g).length<20){
+                crm_alert(0,"订单号输入不足20位，请认真核对!");
+                return;
+            }
 	    }
+        $("#process_div").show();
+        $("#process_div_pic").show();
 	    var cityName = $("#citySelect  option:selected").val();
 	    var dept = $("#dept_manual").val();
 	    var eshopId = $("#eshop_id_manual").val();
