修改app下载路径为oss

--- a/WebContent/download/download.html
+++ b/WebContent/download/download.html
@@ -139,7 +139,7 @@
               $('.loading').hide();
               $('#label_message').show();
           },4000);
-        window.location.href = 'itms-services://?action=download-manifest&url=https://imagedata.guoanshequ.com/file_manager/H546CAEF8_1216025449.plist';
+        window.location.href = 'itms-services://?action=download-manifest&url=https://cdn.guoanshuju.com/daqWeb/static/H546CAEF8_1216025449.plist';
       }else{
     	//$$.showMessage("系统信息", "所下载文件与当前设备不匹配！");
     	//alert("所下载文件与当前设备不匹配！ ");
@@ -153,7 +153,7 @@
           }
     	 if (os.android) {
     		saveDownLoadLog("Android");
-    		window.location.href = 'https://imagedata.guoanshequ.com/file_manager/H546CAEF8_0822145822V.apk';
+    		window.location.href = 'https://cdn.guoanshuju.com/daqWeb/static/H546CAEF8_0822145822V.apk';
     	}else{
     		showMsg('所下载文件与当前设备不匹配！');
     		//alert("所下载文件与当前设备不匹配！ ");
