--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="plugins/fixed-columns/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/bidLib2.0.js"></script>
     <script src="js/cost_labor.js" type = "text/javascript"></script>
-
+    <script src="js/cost_rent.js" type = "text/javascript"></script>
     <script type="text/javascript">
 
         var observe_question_number = 0;
@@ -54,8 +54,16 @@
                 theme: '#428bca'
             });
 
+            laydate.render({//月份控件
+                elem:'#year_rent',
+                value:new Date(),
+                type:"year",
+                btns: ['confirm','now'],
+                theme: '#428bca'
+            });
 
-            getCostLabor();//获取人工成本
+
+            //getCostLabor();//获取人工成本
 
         })
 
@@ -69,14 +77,24 @@
 
                 getCostLabor();//获取人工成本
 
-            }else if(t==1){
+            }else if(t==2){
 
                 getCostRent();//获取租金成本
 
             }
     }
 
-
+        /**
+         * 展示完整信息
+         * @param t
+         */
+    function showWholeContent(t){
+        var id = $(t).attr("id")
+        layer.tips(t.value,"#"+id, {
+            tips: [1, '#0ACC4C'],
+            time: 1000
+        });
+    }
 
 
 
@@ -116,6 +134,9 @@
     .table > tbody > tr > td{padding: 0;line-height: 35px}
     .table > tbody > tr > td input{border: 0}
     .table > tbody > tr > th p{font-weight: bold}
+    td p{white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;
+    }
+
 </style>
 <body style="height: 100%">
 <div class="panel panel-primary" style="margin: 10px 5px 0 5px">
@@ -159,7 +180,7 @@
                                 </td>
                             </tr>
                         </table>
-                        <div class="col-sm-3 no-padding">
+                        <div class="col-sm-4 no-padding">
                             <table class="table" cellspacing="0" cellpadding="0" id="labor_tb_1">
                                 <tr>
                                     <th style="line-height: 57px;text-align: center;background-color:#A9A9A9">序号</th>
@@ -171,7 +192,7 @@
 
                             </table>
                         </div>
-                        <div class="col-sm-9 no-padding" style="overflow-x: scroll;margin-left:-1px">
+                        <div class="col-sm-8 no-padding" style="overflow-x: scroll;margin-left:-1px">
                             <table class="table table_x" cellspacing="0" cellpadding="0" id="labor_tb_2">
                                 <tr>
                                     <th colspan="4" style="text-align: center">1月</th>
@@ -270,53 +291,53 @@
                             </td>
                         </tr>
                     </table>
-                    <div class="col-sm-3 no-padding">
+                    <div class="col-sm-4 no-padding">
                         <table class="table" cellspacing="0" cellpadding="0" id="rent_tb_1">
                             <tr id="rent_tr_1">
-                                <th style="line-height: 57px;text-align: center;background-color:#A9A9A9">序号</th>
-                                <th style="line-height: 57px;text-align: center;background-color: #A9A9A9">门店编码</th>
-                                <th style="line-height: 57px;text-align: center;background-color: #A9A9A9">门店名称</th>
-                                <th style="line-height: 57px;text-align: center;background-color: #A9A9A9">门店地址</th>
+                                <th style="text-align: center;background-color:#A9A9A9">序号</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店编码</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店名称</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店地址</th>
                             </tr>
 
 
                         </table>
                     </div>
-                    <div class="col-sm-9 no-padding" style="overflow-x: scroll;margin-left:-1px">
+                    <div class="col-sm-8 no-padding" style="overflow-x: scroll;margin-left:-1px">
                         <table class="table table_x" cellspacing="0" cellpadding="0" id="rent_tb_2">
 
                             <tr id="rent_tr_2">
-                                <th><p style="text-align: center">年月租金</p></th>
-                                <th><p style="text-align: center">年物业月费用</p></th>
-                                <th><p style="text-align: center">年每月费用</p></th>
-                                <th><p style="text-align: center">1月</p></th>
-                                <th><p style="text-align: center">2月</p></th>
-                                <th><p style="text-align: center">3月</p></th>
-                                <th><p style="text-align: center">4月</p></th>
-                                <th><p style="text-align: center">5月</p></th>
-                                <th><p style="text-align: center">6月</p></th>
-                                <th><p style="text-align: center">7月</p></th>
-                                <th><p style="text-align: center">8月</p></th>
-                                <th><p style="text-align: center">9月</p></th>
-                                <th><p style="text-align: center">10月</p></th>
-                                <th><p style="text-align: center">11月</p></th>
-                                <th><p style="text-align: center">12月</p></th>
-                                <th><p style="text-align: center">合同总金额</p></th>
-                                <th><p style="text-align: center">建筑面积</p></th>
-                                <th><p style="text-align: center">租赁单价</p></th>
-                                <th><p style="text-align: center">第一年租金</p></th>
-                                <th><p style="text-align: center">第二年租金</p></th>
-                                <th><p style="text-align: center">第三年租金</p></th>
-                                <th><p style="text-align: center">第四年租金</p></th>
-                                <th><p style="text-align: center">第五年租金</p></th>
-                                <th><p style="text-align: center">押金</p></th>
-                                <th><p style="text-align: center">中介费</p></th>
-                                <th><p style="text-align: center">物业费</p></th>
-                                <th><p style="text-align: center">物业期限（月）</p></th>
-                                <th><p style="text-align: center">物业每月费用</p></th>
-                                <th><p style="text-align: center">起租日（免租期截止日）</p></th>
-                                <th><p style="text-align: center">到期日</p></th>
-                                <th><p style="text-align: center">起租日（含免租期）</p></th>
+                                <th style="text-align: center"><p style="width: auto" id="rt1">年月租金</p></th>
+                                <th style="text-align: center"><p style="width: auto" id="rt2">年物业月费用</p></th>
+                                <th style="text-align: center"><p style="width: auto" id="rt3">年每月费用</p></th>
+                                <th style="text-align: center"><p>1月</p></th>
+                                <th style="text-align: center"><p>2月</p></th>
+                                <th style="text-align: center"><p>3月</p></th>
+                                <th style="text-align: center"><p>4月</p></th>
+                                <th style="text-align: center"><p>5月</p></th>
+                                <th style="text-align: center"><p>6月</p></th>
+                                <th style="text-align: center"><p>7月</p></th>
+                                <th style="text-align: center"><p>8月</p></th>
+                                <th style="text-align: center"><p>9月</p></th>
+                                <th style="text-align: center"><p>10月</p></th>
+                                <th style="text-align: center"><p>11月</p></th>
+                                <th style="text-align: center"><p>12月</p></th>
+                                <th style="text-align: center"><p>合同总金额</p></th>
+                                <th style="text-align: center"><p>建筑面积</p></th>
+                                <th style="text-align: center"><p>租赁单价</p></th>
+                                <th style="text-align: center"><p>第一年租金</p></th>
+                                <th style="text-align: center"><p>第二年租金</p></th>
+                                <th style="text-align: center"><p>第三年租金</p></th>
+                                <th style="text-align: center"><p>第四年租金</p></th>
+                                <th style="text-align: center"><p>第五年租金</p></th>
+                                <th style="text-align: center"><p>押金</p></th>
+                                <th style="text-align: center"><p>中介费</p></th>
+                                <th style="text-align: center"><p>物业费</p></th>
+                                <th style="text-align: center"><p>物业期限（月）</p></th>
+                                <th style="text-align: center"><p>物业每月费用</p></th>
+                                <th style="text-align: center"><p style="width: auto">起租日（免租期截止日）</p></th>
+                                <th style="text-align: center"><p>到期日</p></th>
+                                <th style="text-align: center"><p style="width: auto">起租日（含免租期)</p></th>
                             </tr>
 
                         </table>
