修改打印日志输出；修改选铺上传附件为OSS

--- a/WebContent/hr/site_selection_list.html
+++ b/WebContent/hr/site_selection_list.html
@@ -160,7 +160,7 @@
   
 	  function showcardinfo(file_name){
 		  
-		  var rootPath = "https://imagedata.guoanshequ.com/file_manager/upload_folder/siteselection/";
+		  var rootPath = "https://cdn.guoanshuju.com/upload_folder/siteselection/";
 		  $("#showcard").attr("src",rootPath+file_name);
 		  
 		  var imgdiv = $("#showcarddiv");
