--- a/WebContent/hr/store_address_edit.html
+++ b/WebContent/hr/store_address_edit.html
@@ -249,7 +249,7 @@ table te .letter{ letter-spacing:2em;}
 	
 	function showcardinfo(file_name){
 		  
-		  var rootPath = "https://imagedata.guoanshequ.com/file_manager/upload_folder/siteselection/";
+		  var rootPath = "https://cdn.guoanshuju.com/daqWeb/upload_folder/siteselection/";
 		  $("#showcard").attr("src",rootPath+file_name);
 		  
 		  var imgdiv = $("#showcarddiv");
