--- a/WebContent/data_access/observe_model_manager.html
+++ b/WebContent/data_access/observe_model_manager.html
@@ -9,7 +9,7 @@
         <frame src="observeManagementHeader.html" name="topFrame" scrolling="no" noresize="noresize" id="topFrameset" title="topFrame" />
         <frameset id="mainFramestId" rows="*" cols="240,*" framespacing="0" frameborder="no" border="0">
             <frame src="observeOrgTree.html" name="leftFrame" scrolling="auto" noresize="noresize" title="leftFrame"  framespacing="0" height="100%"/>
-			<frame src="observeManagementApp.html" name="userManagementApp" title="mainFrame" scrolling="auto" />
+			<frame src="observeManagementApp.html" name="observeManagementApp" title="mainFrame" scrolling="auto" />
         </frameset>
     </frameset>
     <noframes>
