完成租金成本控制

--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -166,7 +166,7 @@
                                     <p><input type="text" name="" id="storeName_labor"/></p>
                                 </td>
                                 <td width="10%">
-                                    <p class="read">日期：</p>
+                                    <p class="read">版本：</p>
                                     <p class="read"><input type="text" readonly  maxlength="12"  id="year_labor"/></p>
                                 </td>
                                 <td width="10%" style="text-align: center">
