数据动态系统加上区域经理的链接跳转到其管理的门店

--- a/WebContent/crm/loginplatform.html
+++ b/WebContent/crm/loginplatform.html
@@ -355,7 +355,8 @@ function toCrm_role(){
 		
 		window.parent.location=getRootPath() + "/crm/index_headquarters.html?d="+encode64(c_month);
 	}else if(iscrmqyjl){
-		window.parent.location=getRootPath() + "/crm/manager_QYJL.html?q_date="+encode64(q_date);
+		//window.parent.location=getRootPath() + "/crm/manager_QYJL.html?q_date="+encode64(q_date);
+		window.parent.location=getRootPath() + "/crm/current_shopkeeper.html";
 	}else if(iscareergp){
 		window.parent.location=getRootPath() + "/crm/index_BU.html";
 	}else if(isfqzycareer){
