--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -82,7 +82,8 @@
                 getCostRent();//获取租金成本
 
             }else if(t==3){
-                getCostRenovation();
+
+                getCostRenovation();//装修摊销
             }
     }
 
@@ -168,7 +169,7 @@
                                     <p><input type="text" name="" id="storeName_labor"/></p>
                                 </td>
                                 <td width="10%">
-                                    <p class="read">年份：</p>
+                                    <p class="read">日期：</p>
                                     <p class="read"><input type="text" readonly  maxlength="12"  id="year_labor"/></p>
                                 </td>
                                 <td width="10%" style="text-align: center">
@@ -347,51 +348,81 @@
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="tab_3">
-                    <form action="" method="post" class="pmsForm">
-                        <table width="100%">
+
+                        <table width="50%">
                             <tr>
-                                <td width="20%">
-                                    <p>明查月份3：</p>
-                                    <p><input type="text" readonly style="background:#CCCCCC" id="observe_month" name="observe_month"></p>
+                                <td width="10%">
+                                    <p>门店编码：</p>
+                                    <p><input type="text" id="storeNo_renovation" name="storeNo_renovation"></p>
                                 </td>
-                                <td width="20%">
-                                    <p>检查人：<span style="color: red">*</span></p>
-                                    <p><input type="text" name="observe_person" id="observe_person"/></p>
+                                <td width="10%">
+                                    <p>门店名称：</p>
+                                    <p><input type="text" name="" id="storeName_renovation"/></p>
                                 </td>
-                                <td width="20%">
-                                    <p class="read">进店日期：<span style="color: red">*</span></p>
-                                    <p class="read"><input type="text" readonly  maxlength="12" name="observe_date" id="observe_date"/></p>
+                                <td width="10%">
+                                    <p class="read">日期：</p>
+                                    <p class="read"><input type="text" readonly  maxlength="12"  id="year_renovation"/></p>
                                 </td>
-                                <td width="20%">
-                                    <p class="read">扣分合计：</p>
-                                    <p class="read"><input type="text" readonly style="background:#CCCCCC"  maxlength="12" name="buckle_points_combined" id="buckle_points_combined"/></p>
+                                <td width="10%" style="text-align: center">
+                                    <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="getCostRenovation()">查询</button>
                                 </td>
-                                <td width="20%">
-                                    <p class="read">本次明查得分：</p>
-                                    <p class="read"><input type="text" readonly style="background:#CCCCCC" maxlength="12" name="points_combined" id="points_combined"/></p>
+                                <td width="10%" style="text-align: center">
+                                    <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="saveCostRenovation()">保存</button>
+                                </td>
+                                <td width="10%" style="text-align:center">
+                                    <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="exportCostRenovation()">导出</button>
                                 </td>
                             </tr>
                         </table>
-                        <table id="observebaseInfo" cellpadding="0" cellspacing="0" border="1" width="100%" style="border: 1px solid #e1e1e1;">
-                            <col width="5%" align="center">
-                            <col width="40%">
-                            <col width="20%">
-                            <col width="15%">
-                            <col width="20%">
-                            <tr>
-                                <th colspan="2" ><span id="store_name"></span>明查检查表</th>
-                                <th colspan="3"><span id="observe_month_info"></span>月<br>检查重点：</th>
-                            </tr>
-                            <tr>
-                                <th width="5%">模块</th>
-                                <th>明查执行</th>
-                                <th>扣分情况说明</th>
-                                <th>扣分</th>
-                                <th>被扣分人员姓名、工号、扣分数</th>
+                    <div class="col-sm-4 no-padding">
+                        <table class="table" cellspacing="0" cellpadding="0" id="renovation_tb_1">
+                            <tr id="renovation_tr_1">
+                                <th style="text-align: center;background-color:#A9A9A9">序号</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店编码</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店名称</th>
+
                             </tr>
 
+
                         </table>
-                    </form>
+                    </div>
+                    <div class="col-sm-8 no-padding" style="overflow-x: scroll;margin-left:-1px">
+                        <table class="table table_x" cellspacing="0" cellpadding="0" id="renovation_tb_2">
+
+                            <tr id="renovation_tr_2">
+                                <th style="text-align: center"><p style="width: auto" >施工单位</p></th>
+                                <th style="text-align: center"><p style="width: auto" >建筑面积</p></th>
+                                <th style="text-align: center"><p style="width: auto" >单方造价</p></th>
+                                <th style="text-align: center"><p>装修施工</p></th>
+                                <th style="text-align: center"><p>商业展屏</p></th>
+                                <th style="text-align: center"><p>家具</p></th>
+                                <th style="text-align: center"><p>标牌及灯箱</p></th>
+                                <th style="text-align: center"><p>过程管理</p></th>
+                                <th style="text-align: center"><p>费率3.5%</p></th>
+                                <th style="text-align: center"><p>空调设备</p></th>
+                                <th style="text-align: center"><p>费率4.8%</p></th>
+                                <th style="text-align: center"><p>设计</p></th>
+                                <th style="text-align: center"><p>全过程项目管理</p></th>
+                                <th style="text-align: center"><p>单店产值合计</p></th>
+                                <th style="text-align: center"><p>摊销月份数</p></th>
+                                <th style="text-align: center"><p>摊销月度成本</p></th>
+                                <th style="text-align: center"><p>竣工时间</p></th>
+                                <th style="text-align: center"><p>1月</p></th>
+                                <th style="text-align: center"><p>2月</p></th>
+                                <th style="text-align: center"><p>3月</p></th>
+                                <th style="text-align: center"><p>4月</p></th>
+                                <th style="text-align: center"><p>5月</p></th>
+                                <th style="text-align: center"><p>6月</p></th>
+                                <th style="text-align: center"><p>7月</p></th>
+                                <th style="text-align: center"><p>8月</p></th>
+                                <th style="text-align: center"><p>9月</p></th>
+                                <th style="text-align: center"><p>10月</p></th>
+                                <th style="text-align: center"><p>11月</p></th>
+                                <th style="text-align: center"><p>12月</p></th>
+                                <th style="text-align: center"><p style="width: auto">合同签订日期</p></th>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
                 <!-- /.tab-pane -->
             </div>
