修改门店和门店详情文件上传路径

--- a/WebContent/data_access/add_store.html
+++ b/WebContent/data_access/add_store.html
@@ -291,7 +291,8 @@ function initview(){
 						}else if(key=="contract"){
 							if(va!=null&&va!=''){
 								$("#contract").show();
-								$("#contract").html('<a href="javascript:void(0);" onclick="downloadFile(contract_file);">'+va.substring(0,25)+'</a>');
+								var file_path=jsonData['url'];
+								$("#contract").html('<a href="'+file_path+'">'+va.substring(0,25)+'</a>');
 							}
 						}else if(key=="tenancyTerm"){
 							if(va!=null&&va!=''){
@@ -430,7 +431,8 @@ function initview(){
 						}else if(key=="contract"){
 							if(va!=null&&va!=''){
 								$("#contract").show();
-								$("#contract").html('<a href="javascript:void(0);" onclick="downloadFile(contract_file);">'+va.substring(0,25)+'</a>');
+								var file_path=jsonData['url'];
+								$("#contract").html('<a href="'+file_path+'" >'+va.substring(0,25)+'</a>');
 							}
 						}else if(key=="tenancyTerm"){
 							if(va!=null&&va!=''){
@@ -1029,7 +1031,7 @@ function downloadFile(pic_name){
 						
 					} else {
 						$("#submit").removeAttr("disabled"); 
-						$$.showMessage("系统信息", "提交失败!");
+						$$.showMessage("系统信息", "请求失败!");
 					}
 				},false);
 	}
