--- a/WebContent/hr/add_storedocumentinfo_reference.html
+++ b/WebContent/hr/add_storedocumentinfo_reference.html
@@ -106,40 +106,40 @@ var work_id = getUrlParamByKey("work_id");
 						if(key=='audit_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='plane_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='record_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='business_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='food_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='tobacco_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')
 							}
 						}else if(key=='book_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='xx_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=='other_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}else if(key=="name"){
 							$("#"+key).val(va);
 							$("#id1").text(va);
@@ -166,47 +166,47 @@ var work_id = getUrlParamByKey("work_id");
 						if(key=='audit_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 
 						}else if(key=='plane_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>');							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>');							}
 
 						}else if(key=='record_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>');						}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>');						}
 
 						}else if(key=='business_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')	;						}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')	;						}
 
 						}else if(key=='food_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')	;						}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')	;						}
 
 						}else if(key=='tobacco_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 
 						}else if(key=='book_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 
 						}else if(key=='xx_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 
 						}else if(key=='other_pic'){
 							if(va!=null&&va!=''){
 								$("#"+key).show();
-								$("#"+key).html('<a href="'+va.split(",")[1]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
+								$("#"+key).html('<a href="'+va.split(",")[1]+'" download="'+va.split(",")[0]+'">'+va.split(",")[0].substring(0,25)+'</a>')							}
 						}
 					}
 				}
